# Logic

./: dune-project  logic.opam
lib/: dune  langage.ml
test/: dune  test_langage.ml
